--- a/src/app/tasks/task/task.component.html
+++ b/src/app/tasks/task/task.component.html
@@ -1,10 +1,10 @@
 <div [ngStyle]="isChange && {'display': 'none'}">
   <span (click)="doDone()" [ngClass]="{'done': task.isDone}">{{ task.name }}</span>
-  <button class="change-btn" (click)="change(changeTask)">Change</button>
+  <button class="change-btn" (click)="change($event, nameTask)">Change</button>
   <button class="delete-btn" (click)="delete()">Delete</button>
 </div>
-<div [ngStyle]="!isChange && {'display': 'none'}">
-  <input type="text" #changeTask [(ngModel)]="name" >
+<div [ngStyle]="!isChange && {'display': 'none'}" (keyup)="keyup($event)">
+  <input type="text" [(ngModel)]="name" #nameTask>
   <button class="add-btn" (click)="approveChange()">OK</button>
-  <button class="back-btn" (click)="back()" >Back</button>
+  <button class="back-btn" (click)="back()">Back</button>
 </div>
