--- a/src/app/main/card/card.component.html
+++ b/src/app/main/card/card.component.html
@@ -1,4 +1,6 @@
-<p>
+<h3>
   {{ list.name }}
-</p>
-<p *ngFor="let task of tasks">{{ task.name }}</p>
+</h3>
+<ul>
+  <li *ngFor="let task of tasks">{{ task.name }}</li>
+</ul>
