--- a/src/app/full-list/full-list.component.html
+++ b/src/app/full-list/full-list.component.html
@@ -1,17 +1,17 @@
-<tr>
-  <td>
+<div class="main-wrapper">
+  <div class="list-box">
     <app-lists (addList)="addList($event)"
                (changeList)="changeList($event)"
                (deleteList)="deleteList($event)"
                [currentList]="currentListId"
                [lists]="lists">
     </app-lists>
-  </td>
-  <td>
+  </div>
+  <div class="task-box">
     <app-tasks (addTask)="addTask($event)"
                (deleteTask)="deleteTask($event)"
                (updateTask)="updateTask($event)"
                [tasks]="tasks">
     </app-tasks>
-  </td>
-</tr>
+  </div>
+</div>
