--- a/src/app/lists/lists.component.html
+++ b/src/app/lists/lists.component.html
@@ -1,11 +1,13 @@
-<div>
-  List:
-</div>
-<div id="add-list-wrapper">
-  <input class="list-input" id="list" type="text" #name (keyup)="keyUp($event)">
-  <button class="add-btn" (click)="addNewList(name)"> Add list</button>
-</div>
-<div *ngFor="let list of lists">
-  <app-list [list]="list" [currentList]="currentList" (changeList)="changeCurrentList($event)"
-            (deleteList)="deleteOneList($event)"></app-list>
-</div>
+<h3>
+  Lists:
+</h3>
+<ol class="bullet">
+  <li *ngFor="let list of lists">
+    <app-list [list]="list"
+              [currentList]="currentList"
+              (changeList)="changeCurrentList($event)"
+              (deleteList)="deleteOneList($event)">
+    </app-list>
+  </li>
+</ol>
+<app-add-form (add)="addNewList($event)"></app-add-form>
